--- a/html/content.html
+++ b/html/content.html
@@ -9,7 +9,7 @@
     <!-- favicon -->
     <link rel="icon" href="https://yt3.ggpht.com/a/AGF-l78km1YyNXmF0r3-0CycCA0HLA_i6zYn_8NZEg=s900-c-k-c0xffffffff-no-rj-mo" type="image/gif" sizes="16x16">
 
-    <link rel="stylesheet" href="css/content.css">
+    <link rel="stylesheet" href="../css/content.css">
 
 </head>
 <body>
@@ -18,7 +18,7 @@
         <div class="containerr">
 
             <div class="containerr_card">
-              <div class="collection-card" style="background-image: url('./img/man-with-bike-helmet.jpg')">
+              <div class="collection-card" style="background-image: url('../img/man-with-bike-helmet.jpg')">
                 <h2 class="h4 card-title" style="color: black;"><b > Men Collections </b> </h2>
 
                 <a href="#" class="btn btn-secondary">
@@ -30,7 +30,7 @@
             </div>
 
             <div class="containerr_card">
-                <div class="collection-card" style="background-image: url('./img/man-with-bike-helmet.jpg')">
+                <div class="collection-card" style="background-image: url('../img/man-with-bike-helmet.jpg')">
                   <h2 class="h4 card-title" style="color: black;"><b > Men Collections </b> </h2>
   
                   <a href="#" class="btn btn-secondary">
@@ -41,7 +41,7 @@
                 </div>
               </div>
               <div class="containerr_card">
-                <div class="collection-card" style="background-image: url('./img/man-with-bike-helmet.jpg')">
+                <div class="collection-card" style="background-image: url('../img/man-with-bike-helmet.jpg')">
                   <h2 class="h4 card-title" style="color: black;"><b > Men Collections </b> </h2>
   
                   <a href="#" class="btn btn-secondary">
@@ -53,7 +53,7 @@
               </div>
 
               <div class="containerr_card">
-                <div class="collection-card" style="background-image: url('./img/man-with-bike-helmet.jpg')">
+                <div class="collection-card" style="background-image: url('../img/man-with-bike-helmet.jpg')">
                   <h2 class="h4 card-title" style="color: black;"><b > Men Collections </b> </h2>
   
                   <a href="#" class="btn btn-secondary">
@@ -79,7 +79,7 @@
             <div class="featured__card">
                 <span class="featured__tag">Sale</span>
 
-                <img src="img/elegant-young-handsome-man.jpg" alt="" class="featured__img">
+                <img src="../img/elegant-young-handsome-man.jpg" alt="" class="featured__img">
 
                 <div class="featured__data">
                     <h3 class="featured__title">Jazzmaster</h3>
@@ -93,7 +93,7 @@
             <div class="featured__card">
                 <span class="featured__tag">Sale</span>
 
-                <img src="img/elegant-young-handsome-man.jpg" alt="" class="featured__img">
+                <img src="../img/elegant-young-handsome-man.jpg" alt="" class="featured__img">
 
                 <div class="featured__data">
                     <h3 class="featured__title">Jazzmaster</h3>
@@ -107,7 +107,7 @@
             <div class="featured__card">
                 <span class="featured__tag">Sale</span>
 
-                <img src="img/elegant-young-handsome-man.jpg" alt="" class="featured__img">
+                <img src="../img/elegant-young-handsome-man.jpg" alt="" class="featured__img">
 
                 <div class="featured__data">
                     <h3 class="featured__title">Jazzmaster</h3>
@@ -121,7 +121,7 @@
             <div class="featured__card">
                 <span class="featured__tag">Sale</span>
 
-                <img src="img/elegant-young-handsome-man.jpg" alt="" class="featured__img">
+                <img src="../img/elegant-young-handsome-man.jpg" alt="" class="featured__img">
 
                 <div class="featured__data">
                     <h3 class="featured__title">Jazzmaster</h3>
@@ -143,7 +143,7 @@
 
             <div class="products__container grid">
                 <div class="products__card">
-                    <img src="img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Spirit rose</h3>
                     <span class="products__price">$1500</span>
@@ -154,7 +154,7 @@
                 </div>
 
                 <div class="products__card">
-                    <img src="img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Khaki pilot</h3>
                     <span class="products__price">$1350</span>
@@ -165,7 +165,7 @@
                 </div>
 
                 <div class="products__card">
-                    <img src="img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Jubilee black</h3>
                     <span class="products__price">$870</span>
@@ -176,7 +176,7 @@
                 </div>
 
                 <div class="products__card">
-                    <img src="img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Fosil me3</h3>
                     <span class="products__price">$650</span>
@@ -187,7 +187,7 @@
                 </div>
 
                 <div class="products__card">
-                    <img src="img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Duchen</h3>
                     <span class="products__price">$950</span>
@@ -201,5 +201,4 @@
         <br><br><br><br>
             
 </body>
-<!-- <script src="content.js"></script> -->
 </html>
