--- a/html/login_page.html
+++ b/html/login_page.html
@@ -16,6 +16,7 @@
     <script src="js/jQuery3.4.1.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
+    <link rel="stylesheet" href="../css/login_page.css">
 </head>
 
 <body>
@@ -31,31 +32,19 @@
             document.getElementById(1).innerHTML = req.responseText;
         }
     </script>
-    <!-- SLIDER -->
-    <div id="2"></div>
-    <script>
-        load("slider.html");
-        function load(url)
-        {
-            req = new XMLHttpRequest();
-            req.open("GET", url, false);
-            req.send(null);
-            document.getElementById(2).innerHTML = req.responseText;
-        }
-    </script>
 
-    <!-- CONTENT SECTION -->
-    <div id="3"></div>
-    <script>
-        load("content.html");
-        function load(url)
-        {
-            req = new XMLHttpRequest();
-            req.open("GET", url, false);
-            req.send(null);
-            document.getElementById(3).innerHTML = req.responseText;
-        }
-    </script>
+    <!-- LOGIN SECTION -->
+    <div id="login">
+        <form action="" method="post">
+            <h2><i class="fas fa-user-circle"></i>&nbsp;&nbsp;LOG IN TO YOUR ACCOUNT</h2>
+            <label for="username"><i class="far fa-user"></i>&nbsp;&nbsp;Username:</label>
+            <input type="text" placeholder="Enter Username..." name="username" required/><br /><br />
+            <label for="password"><i class="fas fa-key"></i>&nbsp;&nbsp;Password:</label>
+            <input type="password" placeholder="Enter Password..." name="password" required/><br /><br />
+            <button type="submit">Login</button>
+            <p class="message">Not registered? <a href="#">Create an account</a>
+        </form>
+    </div>
 
     <!-- FOOTER -->
     <div id="4"></div>
@@ -71,25 +60,5 @@
     </script>
 
 </body>
-
-<!-- slider JS START -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-<script>
-    $(document).ready(function()
-    {
-    $('#containerSlider').slick({
-        dots: true,
-        infinite: true,
-        slidesToShow: 1,
-        slidesToScroll: 1,
-        autoplay: true,
-        autoplaySpeed: 1500,
-        });
-    });
-</script>
-<!-- slider JS ENDS -->
-
-<!-- content JS -->
-<script src="content.js"></script>
 
 </html>
