--- a/html/footer.html
+++ b/html/footer.html
@@ -8,6 +8,7 @@
     <!-- EXTERNAL LINKS -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="../css/footer.css">
 </head>
 
@@ -15,34 +16,43 @@
     <footer>
         <section>    
             <div id="containerFooter">
+
+                <div id="webFooter">
+                    <h1> Contact us </h1>
+                    <br>
+                    <p> IIIT Allahabad </p>
+                    <p> CC3 </p>
+                    <p> 1234567890 </p>
+                    <p> unimart@gmail.com </p>
+                </div>
                 
                 <div id="webFooter">
-                    <h3> online store </h3>
-                    <a href="clothing.html"> CLOTHING </a><br>
-                    <a href="accessories.html"> STATIONARY </a><br>
-                    <a href="groceries.html"> GROCERIES </a><br>
-                    <a href="appliances.html"> APPLIANCES </a><br>
+                    <h1> helpful link </h1>
+                    <br>
+                    <p><a href="clothing.html"> Login </a></p>
+                    <p><a href="accessories.html"> Sign IN </a></p>
+                    <p><a href="groceries.html"> My Account </a></p>
+                    <p><a href="appliances.html"> Cart </a></p>
                 </div>
+
                 <div id="webFooter">
-                    <h3> helpful link </h3>
-                    <p> home </p>
-                    <p>Sign Up</p>
-                    <p>Login</p>
+                    <h1> online store </h1>
+                    <br>
+                    <p><a href="clothing.html"> CLOTHING </a></p>
+                    <p><a href="accessories.html"> STATIONARY </a></p>
+                    <p><a href="groceries.html"> GROCERIES </a></p>
+                    <p><a href="appliances.html"> APPLIANCES </a></p>
                 </div>
+                
                 <div id="webFooter">
-                    <h4>Company</h4>
+                    <h1>Company</h1>
+                    <br>
                     <p>About</p>
                     <p>Blog</p>
                     <p>Affiliate</p>
                     <p> contact </p>
                 </div>
-                <div id="webFooter">
-                    <h3> address </h3>
-                    <p> IIIT Allahabad </p>
-                    <p> CC3 </p>
-                    <p> Prayagraj </p>
-                    <p> India </p>
-                </div>
+                <br>
             </div>
         </section>
 
