--- a/html/header.html
+++ b/html/header.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> Uni-Mart </title>
-    <!-- favicon -->
     <link rel="icon" href="https://yt3.ggpht.com/a/AGF-l78km1YyNXmF0r3-0CycCA0HLA_i6zYn_8NZEg=s900-c-k-c0xffffffff-no-rj-mo" type="image/gif" sizes="16x16">
-    <!-- EXTERNAL LINKS -->
     <link rel="stylesheet" href="../css/header.css">
     <script src="https://kit.fontawesome.com/4a3b1f73a2.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
@@ -16,11 +14,8 @@
     
     <header>
         <section>
-            <!-- MAIN CONTAINER -->
             <div id="container">
-                <!-- SHOP NAME -->
-                <div id="shopName"><a href="index.html"> <b>UNI</b>MART </a></div>
-                    <!-- COLLCETIONS ON WEBSITE -->
+                <div id="shopName"><a href="index.html"><img src="../img/image.png" alt="logo" width="160px"></div>
                     <div id="collection">
                         <div id="clothing"><a href="clothing.html"> CLOTHING </a></div>
                         <div id="stationary"><a href="accessories.html"> STATIONARY </a></div>
@@ -35,7 +30,7 @@
                     <!-- USER SECTION (CART AND USER ICON) -->
                     <div id="user">
                         <a href="cart.html"> <i class="fas fa-shopping-cart addedToCart"><div id="badge"> 0 </div></i></a>
-                        <a href="login_page.html"> <i class="fas fa-user-circle userIcon"></i> </a>
+                        <a href="#"> <i class="fa fa-user userIcon"></i> </a>
                     </div>
             </div>
 
