added images for collection and slider

--- a/html/content.html
+++ b/html/content.html
@@ -18,11 +18,12 @@
         <div class="containerr">
 
             <div class="containerr_card">
-              <div class="collection-card" style="background-image: url('../img/man-with-bike-helmet.jpg')">
-                <h2 class="h4 card-title" style="color: black;"><b > Men Collections </b> </h2>
+              <div class="collection-card" style="background-image: url('../img/collection1.jpg')">
+                <h2 class="h4 card-title"><b > Clothing </b> </h2>
 
                 <a href="#" class="btn btn-secondary">
-                  <span>Explore All</span>
+                    <a href="collection.html">Explore All</a>
+                  <!-- <span>Explore All</span> -->
 
                   <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                 </a>
@@ -30,22 +31,24 @@
             </div>
 
             <div class="containerr_card">
-                <div class="collection-card" style="background-image: url('../img/man-with-bike-helmet.jpg')">
-                  <h2 class="h4 card-title" style="color: black;"><b > Men Collections </b> </h2>
+                <div class="collection-card" style="background-image: url('../img/collection2.jpg')">
+                  <h2 class="h4 card-title" ><b > Stationary </b> </h2>
   
                   <a href="#" class="btn btn-secondary">
-                    <span>Explore All</span>
+                    <a href="stationary.html">Explore All</a>
+                    <!-- <span>Explore All</span> -->
   
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                   </a>
                 </div>
               </div>
               <div class="containerr_card">
-                <div class="collection-card" style="background-image: url('../img/man-with-bike-helmet.jpg')">
-                  <h2 class="h4 card-title" style="color: black;"><b > Men Collections </b> </h2>
+                <div class="collection-card" style="background-image: url('../img/collection3.jpg')">
+                  <h2 class="h4 card-title"><b > Groceries </b> </h2>
   
                   <a href="#" class="btn btn-secondary">
-                    <span>Explore All</span>
+                    <a href="groceries.html">Explore All</a>
+                    <!-- <span>Explore All</span> -->
   
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                   </a>
@@ -53,11 +56,12 @@
               </div>
 
               <div class="containerr_card">
-                <div class="collection-card" style="background-image: url('../img/man-with-bike-helmet.jpg')">
-                  <h2 class="h4 card-title" style="color: black;"><b > Men Collections </b> </h2>
+                <div class="collection-card" style="background-image: url('../img/collection4.jpg')">
+                  <h2 class="h4 card-title"><b > Appliances </b> </h2>
   
                   <a href="#" class="btn btn-secondary">
-                    <span>Explore All</span>
+                    <a href="appliances.html">Explore All</a>
+                    <!-- <span>Explore All</span> -->
   
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                   </a>
