--- a/html/slider.html
+++ b/html/slider.html
@@ -21,7 +21,7 @@
             margin: auto;
             width: 90%;
             text-align: center;
-            padding-top: 100px;
+            padding-top: 60px;
             box-sizing: border-box;
         }
         #containerSlider img
@@ -51,10 +51,10 @@
 <body>
     <section>
             <div id="containerSlider">
-                <div id="slidingImage"> <img src="../img/img1.png" alt="image1"> </div>
-                <div id="slidingImage"> <img src="../img/img2.png" alt="image2"> </div>
-                <div id="slidingImage"> <img src="../img/img3.png" alt="image3"> </div>
-                <div id="slidingImage"> <img src="../img/img4.png" alt="image4"> </div>
+                <div id="slidingImage"> <img src="../img/img3.jpg" alt="image3" style="height: 320px;"> </div>
+                <div id="slidingImage"> <img src="../img/img1.jpg" alt="image1" style="height: 320px;"> </div>
+                <div id="slidingImage"> <img src="../img/img2.jpg" alt="image2" style="height: 320px;"> </div>
+                <div id="slidingImage"> <img src="../img/img4.jpg" alt="image4"> </div>
             </div>
     </section>
 </body>
