--- a/html/content.html
+++ b/html/content.html
@@ -75,7 +75,7 @@
     <div class="featured section container" id="featured">
 
         <h1 class="section__title">
-            Featured
+            Featured Items
         </h1>
 
         <div class="featured__container grid" >
@@ -83,11 +83,11 @@
             <div class="featured__card">
                 <span class="featured__tag">Sale</span>
 
-                <img src="../img/elegant-young-handsome-man.jpg" alt="" class="featured__img">
+                <img src="../img/featured1.jpg" alt="" class="featured__img">
 
                 <div class="featured__data">
-                    <h3 class="featured__title">Jazzmaster</h3>
-                    <span class="featured__price">$1050</span>
+                    <h3 class="featured__title">Black Polo</h3>
+                    <span class="featured__price">$100</span>
                 </div>
 
                 <button class="button featured__button">ADD TO CART</button>
@@ -97,11 +97,11 @@
             <div class="featured__card">
                 <span class="featured__tag">Sale</span>
 
-                <img src="../img/elegant-young-handsome-man.jpg" alt="" class="featured__img">
+                <img src="../img/featured2.jpg" alt="" class="featured__img">
 
                 <div class="featured__data">
-                    <h3 class="featured__title">Jazzmaster</h3>
-                    <span class="featured__price">$1050</span>
+                    <h3 class="featured__title">Maggi</h3>
+                    <span class="featured__price">$5</span>
                 </div>
 
                 <button class="button featured__button">ADD TO CART</button>
@@ -111,11 +111,11 @@
             <div class="featured__card">
                 <span class="featured__tag">Sale</span>
 
-                <img src="../img/elegant-young-handsome-man.jpg" alt="" class="featured__img">
+                <img src="../img/featured3.jpg" alt="" class="featured__img">
 
                 <div class="featured__data">
-                    <h3 class="featured__title">Jazzmaster</h3>
-                    <span class="featured__price">$1050</span>
+                    <h3 class="featured__title">Sticky Notes</h3>
+                    <span class="featured__price">$2</span>
                 </div>
 
                 <button class="button featured__button">ADD TO CART</button>
@@ -125,11 +125,11 @@
             <div class="featured__card">
                 <span class="featured__tag">Sale</span>
 
-                <img src="../img/elegant-young-handsome-man.jpg" alt="" class="featured__img">
+                <img src="../img/featured4.jpg" alt="" class="featured__img">
 
                 <div class="featured__data">
-                    <h3 class="featured__title">Jazzmaster</h3>
-                    <span class="featured__price">$1050</span>
+                    <h3 class="featured__title">Tablet</h3>
+                    <span class="featured__price">$500</span>
                 </div>
 
                 <button class="button featured__button">ADD TO CART</button>
@@ -140,6 +140,196 @@
     </div>
     <br><br><br><br>
         <!--==================== PRODUCTS ====================-->
+        <div class="products section container" id="products">
+            <h1 class="section__title">
+                Products
+            </h1>
+
+            <div class="products__container grid">
+                <div class="products__card">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+
+                    <h3 class="products__title">Spirit rose</h3>
+                    <span class="products__price">$1500</span>
+
+                    <button class="products__button">
+                        <i class='bx bx-shopping-bag'></i>
+                    </button>
+                </div>
+
+                <div class="products__card">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+
+                    <h3 class="products__title">Khaki pilot</h3>
+                    <span class="products__price">$1350</span>
+
+                    <button class="products__button">
+                        <i class='bx bx-shopping-bag'></i>
+                    </button>
+                </div>
+
+                <div class="products__card">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+
+                    <h3 class="products__title">Jubilee black</h3>
+                    <span class="products__price">$870</span>
+
+                    <button class="products__button">
+                        <i class='bx bx-shopping-bag'></i>
+                    </button>
+                </div>
+
+                <div class="products__card">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+
+                    <h3 class="products__title">Fosil me3</h3>
+                    <span class="products__price">$650</span>
+
+                    <button class="products__button">
+                        <i class='bx bx-shopping-bag'></i>
+                    </button>
+                </div>
+
+                <div class="products__card">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+
+                    <h3 class="products__title">Duchen</h3>
+                    <span class="products__price">$950</span>
+
+                    <button class="products__button">
+                        <i class='bx bx-shopping-bag'></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <br><br><br><br>
+
+        <div class="products section container" id="products">
+            <h1 class="section__title">
+                Products
+            </h1>
+
+            <div class="products__container grid">
+                <div class="products__card">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+
+                    <h3 class="products__title">Spirit rose</h3>
+                    <span class="products__price">$1500</span>
+
+                    <button class="products__button">
+                        <i class='bx bx-shopping-bag'></i>
+                    </button>
+                </div>
+
+                <div class="products__card">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+
+                    <h3 class="products__title">Khaki pilot</h3>
+                    <span class="products__price">$1350</span>
+
+                    <button class="products__button">
+                        <i class='bx bx-shopping-bag'></i>
+                    </button>
+                </div>
+
+                <div class="products__card">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+
+                    <h3 class="products__title">Jubilee black</h3>
+                    <span class="products__price">$870</span>
+
+                    <button class="products__button">
+                        <i class='bx bx-shopping-bag'></i>
+                    </button>
+                </div>
+
+                <div class="products__card">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+
+                    <h3 class="products__title">Fosil me3</h3>
+                    <span class="products__price">$650</span>
+
+                    <button class="products__button">
+                        <i class='bx bx-shopping-bag'></i>
+                    </button>
+                </div>
+
+                <div class="products__card">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+
+                    <h3 class="products__title">Duchen</h3>
+                    <span class="products__price">$950</span>
+
+                    <button class="products__button">
+                        <i class='bx bx-shopping-bag'></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <br><br><br><br>
+        <div class="products section container" id="products">
+            <h1 class="section__title">
+                Products
+            </h1>
+
+            <div class="products__container grid">
+                <div class="products__card">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+
+                    <h3 class="products__title">Spirit rose</h3>
+                    <span class="products__price">$1500</span>
+
+                    <button class="products__button">
+                        <i class='bx bx-shopping-bag'></i>
+                    </button>
+                </div>
+
+                <div class="products__card">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+
+                    <h3 class="products__title">Khaki pilot</h3>
+                    <span class="products__price">$1350</span>
+
+                    <button class="products__button">
+                        <i class='bx bx-shopping-bag'></i>
+                    </button>
+                </div>
+
+                <div class="products__card">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+
+                    <h3 class="products__title">Jubilee black</h3>
+                    <span class="products__price">$870</span>
+
+                    <button class="products__button">
+                        <i class='bx bx-shopping-bag'></i>
+                    </button>
+                </div>
+
+                <div class="products__card">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+
+                    <h3 class="products__title">Fosil me3</h3>
+                    <span class="products__price">$650</span>
+
+                    <button class="products__button">
+                        <i class='bx bx-shopping-bag'></i>
+                    </button>
+                </div>
+
+                <div class="products__card">
+                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+
+                    <h3 class="products__title">Duchen</h3>
+                    <span class="products__price">$950</span>
+
+                    <button class="products__button">
+                        <i class='bx bx-shopping-bag'></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <br><br><br><br>
         <div class="products section container" id="products">
             <h1 class="section__title">
                 Products
