--- a/html/content.html
+++ b/html/content.html
@@ -139,255 +139,260 @@
 
     </div>
     <br><br><br><br>
-        <!--==================== PRODUCTS ====================-->
+        <!--==================== Clothing ====================-->
         <div class="products section container" id="products">
             <h1 class="section__title">
-                Products
+                Clothing
             </h1>
 
             <div class="products__container grid">
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/clothing1.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Spirit rose</h3>
-                    <span class="products__price">$1500</span>
+                    <h3 class="products__title">Half Sleeve  Shirt</h3>
+                    <span class="products__price">$100</span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
 
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/clothing2.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Khaki pilot</h3>
-                    <span class="products__price">$1350</span>
+                    <h3 class="products__title">Jeans</h3>
+                    <span class="products__price">$70</span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
 
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/clothing3.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Jubilee black</h3>
-                    <span class="products__price">$870</span>
+                    <h3 class="products__title">Full sleeve T-shirt</h3>
+                    <span class="products__price">$120</span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
 
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/clothing4.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Fosil me3</h3>
-                    <span class="products__price">$650</span>
+                    <h3 class="products__title">Black Polo</h3>
+                    <span class="products__price">$100</span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
 
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/clothing5.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Duchen</h3>
-                    <span class="products__price">$950</span>
+                    <h3 class="products__title">Sneekers</h3>
+                    <span class="products__price">$150</span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
             </div>
         </div>
         <br><br><br><br>
 
+         <!--==================== Stationary ====================-->
         <div class="products section container" id="products">
             <h1 class="section__title">
-                Products
+                Stationary
             </h1>
 
             <div class="products__container grid">
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/stationary1.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Spirit rose</h3>
-                    <span class="products__price">$1500</span>
+                    <h3 class="products__title">Notebook</h3>
+                    <span class="products__price">10</span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
 
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/stationary2.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Khaki pilot</h3>
-                    <span class="products__price">$1350</span>
+                    <h3 class="products__title">Diary</h3>
+                    <span class="products__price">$15</span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
 
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/stationary3.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Jubilee black</h3>
-                    <span class="products__price">$870</span>
+                    <h3 class="products__title">Pen Set</h3>
+                    <span class="products__price">$10</span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
 
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/stationary4.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Fosil me3</h3>
-                    <span class="products__price">$650</span>
+                    <h3 class="products__title">Hilighter</h3>
+                    <span class="products__price">$7</span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
 
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/stationary5.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Duchen</h3>
-                    <span class="products__price">$950</span>
+                    <h3 class="products__title">Pen Stand</h3>
+                    <span class="products__price">$20</span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
             </div>
         </div>
         <br><br><br><br>
+
+         <!--==================== Grocerries ====================-->
         <div class="products section container" id="products">
             <h1 class="section__title">
-                Products
+                Groceries
             </h1>
 
             <div class="products__container grid">
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/grocery1.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Spirit rose</h3>
-                    <span class="products__price">$1500</span>
+                    <h3 class="products__title">Maggi</h3>
+                    <span class="products__price">$5</span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
 
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/grocery2.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Khaki pilot</h3>
-                    <span class="products__price">$1350</span>
+                    <h3 class="products__title">Oats</h3>
+                    <span class="products__price">$10</span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
 
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/grocery3.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Jubilee black</h3>
-                    <span class="products__price">$870</span>
+                    <h3 class="products__title">Dark Fantasy</h3>
+                    <span class="products__price">$15</span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
 
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/grocery4.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Fosil me3</h3>
-                    <span class="products__price">$650</span>
+                    <h3 class="products__title">UNIBIC Biscuit</h3>
+                    <span class="products__price">$8</span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
 
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/grocery5.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Duchen</h3>
-                    <span class="products__price">$950</span>
+                    <h3 class="products__title">Tomato Ketchup</h3>
+                    <span class="products__price">$10</span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
             </div>
         </div>
         <br><br><br><br>
+
+         <!--==================== Appliances ====================-->
         <div class="products section container" id="products">
             <h1 class="section__title">
-                Products
+                Appliances
             </h1>
 
             <div class="products__container grid">
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/electronics1.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Spirit rose</h3>
-                    <span class="products__price">$1500</span>
+                    <h3 class="products__title">Earphone</h3>
+                    <span class="products__price">$25</span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
 
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/electronics2.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Khaki pilot</h3>
-                    <span class="products__price">$1350</span>
+                    <h3 class="products__title">Speaker</h3>
+                    <span class="products__price">$50</span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
 
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/electronics3.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Jubilee black</h3>
-                    <span class="products__price">$870</span>
+                    <h3 class="products__title">Charger</h3>
+                    <span class="products__price">$30/span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
 
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/electronics4.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Fosil me3</h3>
-                    <span class="products__price">$650</span>
+                    <h3 class="products__title">Extension Board</h3>
+                    <span class="products__price">$20</span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
 
                 <div class="products__card">
-                    <img src="../img/elegant-young-handsome-man.jpg" alt="" class="products__img">
+                    <img src="../img/electronics5.jpg" alt="" class="products__img">
 
-                    <h3 class="products__title">Duchen</h3>
-                    <span class="products__price">$950</span>
+                    <h3 class="products__title">Tablet</h3>
+                    <span class="products__price">$500</span>
 
                     <button class="products__button">
-                        <i class='bx bx-shopping-bag'></i>
+                        <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
             </div>
