added contentdetails page

--- a/html/contentDetails.html
+++ b/html/contentDetails.html
@@ -13,6 +13,7 @@
     <!-- header links -->
     <script src="https://kit.fontawesome.com/4a3b1f73a2.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/contetDetails.css">
 
 </head>
 
@@ -30,11 +31,38 @@
     }
 </script>
     
-    <div id="containerProduct">
-        <!-- JS rendered code -->
+<div class="product-details-container">
+    <div class="product-image">
+      <img src="../img/clothing1.jpg" alt="Product Image">
     </div>
+    <div class="product-details">
+      <h2>Half Sleeve Shirt</h2>
+      <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet augue sit amet nunc rhoncus, nec fermentum ipsum tincidunt. In consequat lorem ac enim efficitur efficitur.</p>
+      <p>Price: $19.99</p>
+      <label for="quantity">Quantity:</label>
+      <input type="number" id="quantity" name="quantity" min="1" value="1">
+      <button id="add-to-cart">Add to Cart</button>
+  
+      <div class="specifications">
+        <h3>Specifications</h3>
+        <ul>
+          <li>Material: Polyester</li>
+          <li>Size: 50cm x 70cm</li>
+          <li>Color: Blue</li>
+          <li>Weight: 200g</li>
+        </ul>
+      </div>
+  
+      <div class="reviews">
+        <h3>Customer Reviews</h3>
+        <p>No reviews yet.</p>
+        <!-- You can add customer reviews here -->
+      </div>
+    </div>
+  </div>
+  
     
-<script src="/contentDetails.js"></script>
+<!-- <script src="/contentDetails.js"></script> -->
 
 <!-- FOOTER -->
 <div id="4"></div>
