updated content page

--- a/html/content.html
+++ b/html/content.html
@@ -80,7 +80,7 @@
 
         <div class="featured__container grid" >
             <!-- item 1 -->
-            <div class="featured__card">
+            <div class="featured__card" onclick='window.open("./contentDetails.html", "_blank")'>
                 <span class="featured__tag">Sale</span>
 
                 <img src="../img/featured1.jpg" alt="" class="featured__img">
@@ -94,7 +94,7 @@
             </div>
 
             <!-- item 2 -->
-            <div class="featured__card">
+            <div class="featured__card" onclick='window.open("./contentDetails.html", "_blank")'>
                 <span class="featured__tag">Sale</span>
 
                 <img src="../img/featured2.jpg" alt="" class="featured__img">
@@ -108,7 +108,7 @@
             </div>
 
             <!-- item 3 -->
-            <div class="featured__card">
+            <div class="featured__card" onclick='window.open("./contentDetails.html", "_blank")'>
                 <span class="featured__tag">Sale</span>
 
                 <img src="../img/featured3.jpg" alt="" class="featured__img">
@@ -122,7 +122,7 @@
             </div>
 
             <!-- item 4 -->
-            <div class="featured__card">
+            <div class="featured__card" onclick='window.open("./contentDetails.html", "_blank")'>
                 <span class="featured__tag">Sale</span>
 
                 <img src="../img/featured4.jpg" alt="" class="featured__img">
@@ -146,7 +146,7 @@
             </h1>
 
             <div class="products__container grid">
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/clothing1.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Half Sleeve  Shirt</h3>
@@ -157,7 +157,7 @@
                     </button>
                 </div>
 
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/clothing2.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Jeans</h3>
@@ -168,7 +168,7 @@
                     </button>
                 </div>
 
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/clothing3.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Full sleeve T-shirt</h3>
@@ -179,7 +179,7 @@
                     </button>
                 </div>
 
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/clothing4.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Black Polo</h3>
@@ -190,7 +190,7 @@
                     </button>
                 </div>
 
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/clothing5.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Sneekers</h3>
@@ -211,7 +211,7 @@
             </h1>
 
             <div class="products__container grid">
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/stationary1.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Notebook</h3>
@@ -222,7 +222,7 @@
                     </button>
                 </div>
 
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/stationary2.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Diary</h3>
@@ -233,7 +233,7 @@
                     </button>
                 </div>
 
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/stationary3.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Pen Set</h3>
@@ -244,7 +244,7 @@
                     </button>
                 </div>
 
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/stationary4.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Hilighter</h3>
@@ -255,7 +255,7 @@
                     </button>
                 </div>
 
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/stationary5.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Pen Stand</h3>
@@ -276,7 +276,7 @@
             </h1>
 
             <div class="products__container grid">
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/grocery1.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Maggi</h3>
@@ -287,7 +287,7 @@
                     </button>
                 </div>
 
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/grocery2.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Oats</h3>
@@ -298,7 +298,7 @@
                     </button>
                 </div>
 
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/grocery3.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Dark Fantasy</h3>
@@ -309,7 +309,7 @@
                     </button>
                 </div>
 
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/grocery4.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">UNIBIC Biscuit</h3>
@@ -320,7 +320,7 @@
                     </button>
                 </div>
 
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/grocery5.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Tomato Ketchup</h3>
@@ -341,7 +341,7 @@
             </h1>
 
             <div class="products__container grid">
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/electronics1.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Earphone</h3>
@@ -352,7 +352,7 @@
                     </button>
                 </div>
 
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/electronics2.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Speaker</h3>
@@ -363,18 +363,18 @@
                     </button>
                 </div>
 
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/electronics3.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Charger</h3>
-                    <span class="products__price">$30/span>
+                    <span class="products__price">$30</span>
 
                     <button class="products__button">
                         <i class="fa fa-shopping-cart"></i>
                     </button>
                 </div>
 
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/electronics4.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Extension Board</h3>
@@ -385,7 +385,7 @@
                     </button>
                 </div>
 
-                <div class="products__card">
+                <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/electronics5.jpg" alt="" class="products__img">
 
                     <h3 class="products__title">Tablet</h3>
