added sigin and login page

--- a/html/signin_page.html
+++ b/html/signin_page.html
@@ -16,7 +16,7 @@
     <script src="js/jQuery3.4.1.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
-    <link rel="stylesheet" href="../css/login_page.css">
+    <link rel="stylesheet" href="../css/signin_page.css">
 </head>
 
 <body>
@@ -33,16 +33,16 @@
         }
     </script>
 
-    <!-- LOGIN SECTION -->
-    <div class="login">
+    <!-- signin SECTION -->
+    <div class="signin">
         <form action="" method="post">
-            <h2><i class="fas fa-user-circle"></i>&nbsp;&nbsp;LOG IN TO YOUR ACCOUNT</h2>
+            <h2><i class="fas fa-user-circle"></i>&nbsp;&nbsp;CREATE A NEW ACCOUNT</h2>
             <label for="username"><i class="far fa-user"></i>&nbsp;&nbsp;Username:</label>
             <input type="text" placeholder="Enter Username..." name="username" required/><br /><br />
             <label for="password"><i class="fas fa-key"></i>&nbsp;&nbsp;Password:</label>
             <input type="password" placeholder="Enter Password..." name="password" required/><br /><br />
-            <button type="submit">Login</button>
-            <p class="message">Not registered? <a href="./signin_page.html">Create an account</a>
+            <button type="submit">Signin</button>
+            <p class="message">Already registered? <a href="./login_page.html">Log In</a>
         </form>
     </div>
 
