updated html links

--- a/html/footer.html
+++ b/html/footer.html
@@ -29,10 +29,10 @@
                 <div id="webFooter">
                     <h1> helpful link </h1>
                     <br>
-                    <p><a href="clothing.html"> Login </a></p>
-                    <p><a href="accessories.html"> Sign IN </a></p>
-                    <p><a href="groceries.html"> My Account </a></p>
-                    <p><a href="appliances.html"> Cart </a></p>
+                    <p><a href="./login_page.html"> Login </a></p>
+                    <p><a href="./signin_page.html"> Sign IN </a></p>
+                    <p><a href="./profile.html"> My Account </a></p>
+                    <p><a href="./cart.html"> Shopping Cart </a></p>
                 </div>
 
                 <div id="webFooter">
