added subcategories page

--- a/html/content.html
+++ b/html/content.html
@@ -22,7 +22,7 @@
                 <h2 class="h4 card-title"><b > Clothing </b> </h2>
 
                 <a href="#" class="btn btn-secondary">
-                    <a href="collection.html">Explore All</a>
+                    <a href="clothing.html">Explore All</a>
                   <!-- <span>Explore All</span> -->
 
                   <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -77,7 +77,7 @@
         <h1 class="section__title">
             Featured Items
         </h1>
-
+<br>
         <div class="featured__container grid" >
             <!-- item 1 -->
             <div class="featured__card" onclick='window.open("./contentDetails.html", "_blank")'>
@@ -209,7 +209,6 @@
             <h1 class="section__title">
                 Stationary
             </h1>
-
             <div class="products__container grid">
                 <div class="products__card" onclick='window.open("./contentDetails.html", "_blank")'>
                     <img src="../img/stationary1.jpg" alt="" class="products__img">
