--- a/html/header.html
+++ b/html/header.html
@@ -18,19 +18,19 @@
                 <div id="shopName"><a href="index.html"><img src="../img/image.png" alt="logo" width="160px"></div>
                     <div id="collection">
                         <div id="clothing"><a href="clothing.html"> CLOTHING </a></div>
-                        <div id="stationary"><a href="accessories.html"> STATIONARY </a></div>
+                        <div id="stationary"><a href="stationary.html"> STATIONARY </a></div>
                         <div id="groceries"><a href="groceries.html"> GROCERIES </a></div>
                         <div id="appliances"><a href="appliances.html"> APPLIANCES </a></div>
                     </div>
                     <!-- SEARCH SECTION -->
                     <div id="search">
                         <i class="fas fa-search search"></i>
-                        <input type="text" id="input" name="searchBox" placeholder="Search  for products..."/> 
+                        <input type="text" id="input" name="searchBox" placeholder="Search for Clothing and Accessories">
                     </div>
                     <!-- USER SECTION (CART AND USER ICON) -->
                     <div id="user">
                         <a href="cart.html"> <i class="fas fa-shopping-cart addedToCart"><div id="badge"> 0 </div></i></a>
-                        <a href="./login_page.html"> <i class="fa fa-user userIcon"></i> </a>
+                        <a href="login_page.html"> <i class="fa fa-user userIcon"></i> </a>
                     </div>
             </div>
 
