--- a/html/signin_page.html
+++ b/html/signin_page.html
@@ -34,6 +34,7 @@
     </script>
 
     <!-- signin SECTION -->
+    <div class="signin-container">
     <div class="signin">
         <form action="" method="post">
             <h2><i class="fas fa-user-circle"></i>&nbsp;&nbsp;CREATE A NEW ACCOUNT</h2>
@@ -45,6 +46,7 @@
             <p class="message">Already registered? <a href="./login_page.html">Log In</a>
         </form>
     </div>
+</div>
 
     <!-- FOOTER -->
     <div id="4"></div>
