--- a/html/login_page.html
+++ b/html/login_page.html
@@ -34,6 +34,7 @@
     </script>
 
     <!-- LOGIN SECTION -->
+    <div class="login-container">
     <div class="login">
         <form action="" method="post">
             <h2><i class="fas fa-user-circle"></i>&nbsp;&nbsp;LOG IN TO YOUR ACCOUNT</h2>
@@ -45,6 +46,7 @@
             <p class="message">Not registered? <a href="./signin_page.html">Create an account</a>
         </form>
     </div>
+</div>
 
     <!-- FOOTER -->
     <div id="4"></div>
