removed some extra lines

--- a/html/cart.html
+++ b/html/cart.html
@@ -33,7 +33,7 @@
         <h3 id="totalItem"> Total Items: 0 </h3>
 
         <div id="cartContainer">
-            <!-- JS rendered code -->
+            <!-- javascript rendering -->
         </div>
 
     </div>
@@ -51,5 +51,4 @@
             document.getElementById(4).innerHTML = req.responseText;
         }
     </script>
-<script src="../js/cart.js"></script>
 </html>
